[package]
name = "onsen"
version = "0.1.0"
authors = ["Humi@bass_clef_ <bassclef.nico@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ux = "0.1"
yew = "0.17"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'Document',
  'Element',
  'HtmlImageElement',
  'Window',
]