[package]
name = "onsen"
version = "0.1.0"
authors = ["Humi@bass_clef_ <bassclef.nico@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
js-sys = "0.3"
romaji = "0.1"
serde = "1.0"
serde_json = "1.0"
stringreader = "0.1"
yew = "0.17"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'CacheStorage',
  'CssStyleDeclaration',
  'Document',
  'DomRect',
  'DomTokenList',
  'Element',
  'Event',
  'HtmlElement',
  'HtmlImageElement',
  'Location',
  'Node',
  'RequestInit',
  'Storage',
  'Touch',
  'TouchEvent',
  'TouchList',
  'Window',
]

[dependencies.async-std]
version = "1.7.0"
features = ["unstable"]
